syntax = "proto3";

package protobuf;

option optimize_for = SPEED;

message LC_CheckAccountResult{
	enum Result {
		SUCCESS = 0;
		OK = 1;
		SERVERERROR = 2;
		USERNOTFOUND = 3;
		AUTH_FAILED = 4;
		ISONFIRE = 5;
	}
	Result result = 1;
	uint32 server_time = 2;
	string sessionKey = 3;
	string uid = 4;
	string gameServerIp = 5;
}